# reinforce_minigrid

./: .gitignore  LICENSE  Makefile  README.md  babyai.md  environment.yml  issues.md  manual.py  ppo_keras.md  pylintrc  pyproject.toml  refactoring_plan.md
checkpoints/: training_log.csv
configs/: default_training.yaml  kaggle_training.yaml
docs/: maze_documentation.md  ppo_documentation.md
examples/: config_training.py  config_training_ppo.py  hyperparameter_search.py  hyperparameter_search_a2c.py  hyperparameter_search_ppo.py
examples/configs/: a2c_search.yaml
examples/examples/configs/: a2c_search.yaml
maze/: __init__.py
maze/envs/: __init__.py  base_maze.py  easy_maze.py  hard_maze.py  maze.py  medium_maze.py
models/: ppo_maze_final_policy.weights.h5  ppo_maze_final_value.weights.h5  ppo_maze_policy.weights.h5  ppo_maze_value.weights.h5
notebooks/: kaggle_training.ipynb
reinforce/: __init__.py  addons.py  agent.py  buffer.py  factory.py  game.py  losses.py  model.py  network.py  ppo.py  replay.py  rnd.py  train.py  utils.py  visualize.py
reinforce/agents/: __init__.py  base_agent.py  factory.py
reinforce/agents/a2c/: __init__.py  a2c_model.py  agent.py  cnn_encoder.py  model.py
reinforce/agents/actor_critic/: __init__.py  a2c_agent.py  ac_agent.py  actor_critic_agent.py  model.py  ppo_agent.py
reinforce/agents/models/: __init__.py  resnet.py  separate_net.py
reinforce/agents/persistence/: __init__.py  base_persistence.py  keras_persistence.py
reinforce/config/: __init__.py  a2c_model.yaml  base_config.yaml  config_loader.py  eval_config.yaml  train_config.yaml  training_config.py
reinforce/configs/: __init__.py  config_manager.py
reinforce/configs/manager/: __init__.py  config_manager.py
reinforce/configs/models/: __init__.py  a2c_config.py  distributed_trainer_config.py  environment_config.py  episode_trainer_config.py  experiment_config.py
reinforce/configs/schemas/: agent_schema.py  trainer_schema.py
reinforce/core/: __init__.py  base_agent.py  base_buffer.py  base_evaluator.py  base_trainer.py  network_utils.py  normalization.py  registry.py  schedules.py
reinforce/dqn/: __init__.py  agent.py  buffer.py  losses.py  network.py
reinforce/environments/: __init__.py  base_environment.py  factory.py
reinforce/environments/minigrid/: __init__.py  maze_env.py
reinforce/evaluators/: __init__.py  metrics.py  visualizer.py
reinforce/experiments/: __init__.py  experiment_runner.py  hyperparameter_search.py
reinforce/learning/: __init__.py  evaluate.py  hyperparameter_search.py  train.py  visualize.py
reinforce/learning/evaluation/: __init__.py  evaluator.py
reinforce/learning/trainers/: __init__.py  a2c_trainer.py  ac_trainer.py  base_trainer.py  episode_trainer.py  factory.py  ppo_trainer.py
reinforce/learning/utils/: __init__.py  config.py  environment.py  logging.py
reinforce/ppo/: __init__.py  agent.py  buffer.py  exploration.py  network.py  ppo.py  rnd.py
reinforce/trainers/: __init__.py  episode_trainer.py  ppo_trainer.py
reinforce/utils/: __init__.py  aim_logger.py  logging_setup.py  losses.py  preprocessing.py  replay_buffer.py
reinforce/utils/buffers/: __init__.py  base.py  buffer.py  prioritized.py  rollout.py  rollout_buffer.py
reinforce/utils/logger/: __init__.py  aim_logger.py  aim_tracker.py  base_logger.py  logging_setup.py  optuna_manager.py
reinforce/utils/losses/: __init__.py  a2c.py  base.py
reinforce/utils/management/: __init__.py  aim_tracker.py  logging_setup.py  optuna_manager.py
reinforce/utils/persistence/: __init__.py  checkpoint_manager.py  keras_persistence.py
reinforce/utils/preprocessing/: __init__.py  frame_processing.py  image_processing.py
reinforce/utils/replay_buffer/: __init__.py  base.py  prioritized.py
tests/: test_game.py  test_model.py  test_prioritized_buffer.py
training/: hyperparameter_search.py  train_agent.py
training/configs/: a2c_search.yaml  ppo_search.yaml
(+35 files in other folders)
