[tool.poetry]
name = "reinforce-minigrid"
version = "0.1.0"
description = "Explore reinforcement learning with minigrid"
authors = ["Kone Abdallah Hakim"]
license = "MIT"
readme = "README.md"
packages = [{include = "maze"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
tensorflow = "^2.19.0"
minigrid = "3.0.0"
rich = "^13.3.3"
tqdm = "^4.65.0"
hydra-core = "^1.3.2"
pillow = "^9.5.0"
gymnasium = "^1.1.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
pylint = "^2.17.2"
tensorflow-metal = "^1.2.0"

[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
max-line-length = 119
disable = ["E0401", "E0611", "W0613", "R0903"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
